fix: espacement collapses footer

--- a/src/pages/Logement/logement.css
+++ b/src/pages/Logement/logement.css
@@ -82,6 +82,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
+  margin-bottom: 40px;
 }
 
 .logement_carrousel_counter {
